--- a/style.css
+++ b/style.css
@@ -1,62 +1,90 @@
-.photo {
-    width: 150px;
-    padding: 10px;
-    border-radius: 50%;
-}
-.info{
-    text-align: right;
-    line-height: 20px;
-}
-.name{
-    text-align: left;
-    line-height: 10px;
-}
-.descr{
-    font-size: x-large;
-    
-}
-.speciality{
-    
-    font-size: medium;
-    line-height: 5px;
-}
-.description> p{
-    margin-top: 2em;
-    margin-bottom: 2em;
-
-}
-.table_inf{
-    border: solid rgb(222, 51, 182);
-   
-    border-collapse: collapse;
-    border-width: 2px;
-
-}
-.technology{
-    margin-top: 2em;
-    margin-bottom: 2em;
-
-}
-.what_i_do{
-    margin-top: 2em;
-    margin-bottom: 2em;
-}
-.interesting{
-    padding: 1rem 1.5rem;
-    background: rgb(222, 51, 182); /* Синий цвет фона */
-    color: #fff; /* Белый цвет текста */
+.mains{
     display: flex;
-    align-items: center;
-    justify-content: center
+    flex-direction: column;
+    /* align-items: center; */
+    border-radius:8px;
+    width: 40%;
+    height: 100%;
+    background: rgb(236, 231, 231);
+    text-align: center;
+    /* align-items: center; */
+    /* justify-content: space-around; */
+    margin: 15% auto;
+    
+    
+    padding: 10px;
+
+   
 }
-input {
-    background: rgb(222, 51, 182); /* Синий цвет фона */
-    color: #fff; /* Белый цвет текста */
-    border: none; /* Убираем рамку */
-    padding: 1rem 1.5rem; /* Поля вокруг текста */
-    margin-bottom: 1rem; /* Отступ снизу */ 
-   }
-.go_on { background: rgb(222, 51, 182);
-         position: relative;
-         left: 50%;
-         transform: translate(-50%, 0); }
+#z{
+ 
+    display: table;
+    /* padding: 20%; */
+    margin: 10px 0% 10px;
+    border-radius:5px;
+    padding: 10px 5px 160px 5px ;
+    background-color: #ffffff;
+  
+  
+}
+#y{
+  
+    border-radius: 5px ;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0% 10px;
+    background-color: rgb(255, 255, 255);
+  
+}
+.button{
+  width: 100%;  
+  background-color: #f3bf15; /* Green */
+  border-radius: 0 5px 5px 0  ;
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 100%;
+}
+.button:hover {
+    
+    opacity: 0.8;
+    cursor: pointer;
+  }
+.searchs {
+    width:100%;
+    resize: vertical;
+    padding:15px;
+    border-radius:15px;
+    border:0;
+    /* box-shadow:4px 4px 10px rgba(0,0,0,0.06); */
+    height:20px;
+  
+  }
+  .searchs:focus {
+    color: #212529;
+    border-radius:6px;
+    background-color: #fff;
+    border-color: #bdbdbd;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(158, 158, 158, 0.25);
+  }
+
+
+tr{
+  
+  
+  display: flex;
+  margin: 10px;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #ecc6c6;
+  padding: 10px ;
+  border-radius: 5px ;
+
+}
+img{
+  width: 3vh;
+}
